--- a/scss/measure/_instructions.scss
+++ b/scss/measure/_instructions.scss
@@ -81,6 +81,8 @@
             );
             position: relative;
             top: 7px;
+            white-space: nowrap;
+            word-break: normal;
         }
     }
 
